--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.co.adapativelogic</groupId>
     <artifactId>jbehave-to-gherkin</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
@@ -78,5 +78,6 @@
         <connection>scm:git:git@github.com:adaptive-logic/jbehave-to-gherkin.git</connection>
         <url>scm:git:git@github.com:adaptive-logic/jbehave-to-gherkin.git</url>
         <developerConnection>scm:git:git@github.com:adaptive-logic/jbehave-to-gherkin.git</developerConnection>
-    </scm>
+      <tag>jbehave-to-gherkin-1.0.0</tag>
+  </scm>
 </project>
